# obs-studio

./: .gitignore  .gitmodules  CMakeLists.txt  obs-studio.code-workspace
.devcontainer/: devcontainer.json
UI/: CMakeLists.txt  Mapper.cpp  api-interface.cpp  context-bar-controls.cpp  context-bar-controls.hpp  control-edit.cpp  control-edit.hpp  mapper.hpp  obs-actions-widget.cpp  obs-actions-widget.hpp  obs-app.cpp  obs-controller.cpp  obs-controller.hpp  obs-hotkeys-widget.cpp  obs-hotkeys-widget.hpp  properties-view.cpp  properties-view.hpp  source-tree.cpp  undo-stack-obs.cpp  undo-stack-obs.hpp  utils.cpp  utils.hpp  window-basic-filters.cpp  window-basic-filters.hpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-preview.cpp  window-basic-preview.hpp  window-basic-properties.cpp  window-basic-settings.cpp  window-basic-settings.hpp  window-basic-transform.cpp  window-control.cpp  window-control.hpp
UI/data/locale/: en-US.ini
UI/data/themes/: Dark.qss
UI/forms/: OBSActionsWidget.ui  OBSBasicSettings.ui  OBSHotkeysWidget.ui  controls.qrc  obs.qrc
UI/frontend-plugins/: CMakeLists.txt
UI/frontend-plugins/mike/: CMakeLists.txt  container-widget.cpp  container-widget.hpp  dashboard-widget.cpp  dashboard-widget.hpp  login-widget.cpp  login-widget.hpp  style.hpp  switch.cpp  switch.hpp
UI/frontend-plugins/mike/temp/: edit-widget.cpp  edit-widget.h  mike-api.cpp  mike-api.hpp  mike-login.cpp  mike-login.hpp  obs-multi-rtmp.cpp  pch.h  push-widget.cpp  push-widget.h  test.cpp
UI/obs-frontend-api/: obs-frontend-api.cpp  obs-frontend-api.h  obs-frontend-internal.hpp
docs/sphinx/: reference-scenes.rst
libobs/: CMakeLists.txt  obs-control.c  obs-control.h  obs-data.c  obs-data.h  obs-hotkey.c  obs-hotkey.h  obs-internal.h  obs-scene.c  obs-source.c  obs-source.h  obs-windows.c  obs.c  obs.h  obs.hpp
libobs-winrt/: winrt-capture.cpp
plugins/: CMakeLists.txt
plugins/obs-actions/: CMakeLists.txt  README.md
plugins/obs-actions/src/: obs-action.cpp  obs-action.h  obs-controller.cpp  obs-controller.hpp  utils.cpp  utils.hpp
plugins/obs-actions/src/forms/: OBSActionsWidget.ui  obs-actions-widget.cpp  obs-actions-widget.hpp
plugins/obs-hotkey/: CMakeLists.txt  obs-hotkey.h
plugins/obs-hotkey/src/: hotkey-edit.cpp  obs-hotkey.cpp  obs-hotkey.h  plugin-main.c
plugins/test-controls/src/: test-control.cpp
plugins/test-controls/src/forms/: settings-dialog.cpp  settings-dialog.h  settings-dialog.ui
src/: events.cpp  obs-midi.cpp  obs-midi.h
src/forms/: settings-dialog.cpp  settings-dialog.h  settings-dialog.ui
